--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "3.1.1",
     "react-test-render": "^1.1.2",
     "redux": "^4.0.4",
+    "redux-saga": "^1.1.1",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
